# winterp

./: .gitignore  01_hexdump.txt  01_test.wasm.txt  02_test_prio1.wasm.txt  03_test_prio2.wat.txt  04_test.txt  05_test.txt  07_test_bulk_memory.wasm.text  09_print_hello.txt  CMakeLists.txt  README.md
include/: bits.hpp  instructions.hpp  leb128.hpp  runtime.hpp  sections.hpp
src/: instructions.cpp  leb128.cpp  main.cpp  runtime.cpp  sections.cpp
test_binaries/: 01_test.wasm  02_test_prio1.wasm  03_test_prio2.wasm  04_test_prio3.wasm  05_test_complex.wasm  07_test_bulk_memory.wasm  09_print_hello.wasm
tests/: leb128.cpp  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_07.cpp  test_09.cpp
